# fastimagecaption

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml  vocab.json
src/fastapi/: __init__.py  app.py
src/imagecaptioning/: inference.py  model.py  token_utils.py  train.py  vocab.py
static/: index.html
