[project]
name = "ptorch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.12.0",
    "bitsandbytes>=0.49.1",
    "fastapi>=0.129.0",
    "jupyterlab>=4.5.4",
    "matplotlib>=3.10.8",
    "opencv-python>=4.13.0.92",
    "pypdf>=6.7.0",
    "python-multipart>=0.0.22",
    "torch>=2.10.0",
    "torchvision>=0.25.0",
    "transformers>=5.1.0",
    "uvicorn>=0.41.0",
]
